<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/scan_page_bk"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/online_page_main_heigh"
        android:layout_marginBottom="@dimen/online_page_main_margin_top"
        android:layout_marginLeft="@dimen/online_page_main_margin_left"
        android:layout_marginRight="@dimen/online_page_main_margin_left"
        android:layout_marginTop="@dimen/online_page_main_margin_top"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="@dimen/online_page_main_width"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/online_page_using_heigh"
                android:layout_height="@dimen/online_page_using_heigh"
                android:src="@drawable/online_using" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/online_page_next_user_margin_top"
                android:text="@string/str_online_page_next_user"
                android:textColor="@android:color/white"
                android:textSize="@dimen/online_page_next_user_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/online_next_user_info_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_online_page_next_user_info_test_1"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/online_next_user_time_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_online_page_next_user_info_test_2"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/online_page_main_width"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/online_page_using_heigh"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/online_page_user_info_margin_top"
                    android:text="@string/str_online_page_user"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/online_page_next_user_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/online_current_user_info_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_online_page_next_user_info_test_1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/online_current_user_time_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_online_page_next_user_info_test_2"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/online_page_next_user_margin_top"
                    android:text="@string/str_online_page_user_time"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/online_page_next_user_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/online_current_user_login_time_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_online_page_next_user_info_test_1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/online_current_time_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_online_page_next_user_info_test_2"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/online_current_use_time_duration_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_online_page_next_user_info_test_2"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <Button 
                android:layout_width="@dimen/online_page_button_width"
                android:layout_height="match_parent"
                android:textColor="@android:color/white" 
                android:textStyle="bold" 
                android:textSize="@dimen/online_page_button_text_size"
                android:background="@drawable/online_page_button_use_logout_background"
                android:text="@string/str_online_page_logout"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_page_contact_heigh"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/str_home_page_contact_person"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>