<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/logout_confirm_dialog_width"
    android:layout_height="@dimen/logout_confirm_dialog_heigh"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/logout_confirm_dialog_title_heigh"
        android:background="@drawable/logout_confirm_title_bk"
        android:gravity="center"
        android:text="@string/str_logout_confirm_page_logout_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/logout_confirm_dialog_title_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/logout_confirm_dialog_margin"
        android:layout_marginTop="@dimen/logout_confirm_dialog_margin"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/logout_confirm_dialog_prompt_info_heigh"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/logout_confirm_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/logout_confirm_dialog_margin"
                android:gravity="center_vertical"
                android:text="@string/str_logout_confirm_page_logout_prompt"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/logout_confirm_dialog_title_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/logout_confirm_dialog_prompt_info_heigh"
            android:layout_marginTop="@dimen/logout_confirm_dialog_margin"
            android:orientation="horizontal" >

            <Button
                android:layout_width="@dimen/logout_confirm_dialog_button_width"
                android:layout_height="@dimen/logout_confirm_dialog_button_heigh"
                android:textColor="@android:color/white"
                android:background="@drawable/logoout_confirm_button_positive_background"
                android:text="@string/str_logout_confirm_page_logout_positive" />

            <Button
                android:layout_marginLeft="@dimen/logout_confirm_dialog_margin"
                android:layout_width="@dimen/logout_confirm_dialog_button_width"
                android:layout_height="@dimen/logout_confirm_dialog_button_heigh" 
                android:textColor="@android:color/darker_gray"
                android:background="@drawable/logoout_confirm_button_negative_background"
                android:text="@string/str_logout_confirm_page_logout_negative"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>