<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/permission_denied_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/permisson_denied_page_info_heigh"
        android:layout_marginLeft="@dimen/permisson_denied_page_info_margin_left"
        android:layout_marginRight="@dimen/permisson_denied_page_info_margin_right"
        android:layout_marginTop="@dimen/permisson_denied_page_button_margin_top"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/permisson_denied_page_imageview_width"
            android:layout_height="@dimen/permisson_denied_page_imageview_heigh"
            android:src="@drawable/permisson_denied_error" />

        <LinearLayout
            android:layout_width="@dimen/permisson_denied_page_text_width"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/permisson_denied_page_text_margin_left"
            android:layout_marginTop="@dimen/permisson_denied_page_text_margin_top"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_permission_denied_page_error_info"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textSize="@dimen/permisson_denied_page_error_info_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/permisson_denied_page_contract_margin_top"
                android:text="@string/sstr_permission_denied_contact_person"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/permisson_denied_page_contract_text_size" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/permisson_denied_page_button_login"
        android:layout_width="@dimen/permisson_denied_page_button_width"
        android:layout_height="@dimen/permisson_denied_page_button_heigh"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/permisson_denied_page_button_margin_top"
        android:background="@drawable/premisson_denied_button_background"
        android:text="@string/str_permission_denied_page_button_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/permisson_denied_page_button_generate"
        android:layout_width="@dimen/permisson_denied_page_button_width"
        android:layout_height="@dimen/permisson_denied_page_button_heigh"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/permisson_denied_page_button_margin_top"
        android:background="@drawable/premisson_denied_button_background"
        android:text="@string/str_permission_denied_page_button_generate"
        android:textColor="@android:color/white" />

</LinearLayout>