<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_page_top_width"
        android:background="@color/home_top_title"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/home_page_top_title_textview_width"
            android:layout_height="@dimen/home_page_top_title_textview_height"
            android:layout_marginLeft="@dimen/home_page_top_title_margin"
            android:src="@drawable/top_title_1" />

        <ImageView
            android:layout_width="@dimen/home_page_top_title_textview_width"
            android:layout_height="@dimen/home_page_top_title_textview_height"
            android:layout_marginLeft="@dimen/home_page_top_title_margin"
            android:src="@drawable/top_title_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/home_page_main_bk"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/home_page_main_width"
            android:layout_marginBottom="@dimen/home_page_main_margin_top"
            android:layout_marginLeft="@dimen/home_page_main_margin_left"
            android:layout_marginRight="@dimen/home_page_main_margin_left"
            android:layout_marginTop="@dimen/home_page_main_margin_top"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/str_home_page_top_title_remind_3"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/home_page_main_margin_top"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="@dimen/home_page_qr_layout_width"
                    android:layout_height="@dimen/home_page_qr_layout_heigh"
                    android:background="@drawable/home_page_qr_bk"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/home_page_qr_image_view"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="@dimen/home_page_qr_margin"
                        android:layout_marginLeft="@dimen/home_page_qr_margin"
                        android:layout_marginRight="@dimen/home_page_qr_margin"
                        android:layout_marginTop="@dimen/home_page_qr_margin" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_page_qr_layout_heigh"
                    android:gravity="center|right"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/home_page_button_login"
                        android:layout_width="@dimen/home_page_button_width"
                        android:layout_height="@dimen/home_page_button_heigh"
                        android:background="@drawable/home_page_button_login_background"
                        android:text="@string/str_home_page_button_login"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/home_page_button_textsize"
                        android:textStyle="bold" >
                    </Button>

                    <Button
                        android:id="@+id/home_page_button_use_log"
                        android:layout_width="@dimen/home_page_button_width"
                        android:layout_height="@dimen/home_page_button_heigh"
                        android:layout_marginTop="@dimen/home_page_button_margin"
                        android:background="@drawable/home_page_button_use_log_background"
                        android:text="@string/str_home_page_button_use_log"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/home_page_button_textsize"
                        android:textStyle="bold" >
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/home_page_contact_heigh"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/str_home_page_contact_person"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>